# genai-doc-assistant

./: Makefile  README.md  docker-compose.yml  env.example
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: postgres.py  redis.py
backend/app/routes/v1/: chat.py
